oc nav spacing fixes

--- a/css/src/molecules/_search-form.scss
+++ b/css/src/molecules/_search-form.scss
@@ -31,6 +31,11 @@ input[type="search"] {
     background: transparent;
     color: $search-input-color;
 
+    @include breakpoint($utility-nav-columns) {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
     &:focus {
         background: $search-input-bg;
         outline: none;
