--- a/css/src/molecules/_utility-bar.scss
+++ b/css/src/molecules/_utility-bar.scss
@@ -49,6 +49,12 @@
 
 	a {
 		font-size: 16px;
+		@include breakpoint($utility-nav-columns) {
+			border: 2px solid rgba(255,255,255,0.22);
+			padding: 12px 0;
+			text-align: center;
+			margin-bottom: 24px;
+		}
 
 		&:after {
 			@include breakpoint($utility-nav-rows) {
@@ -94,9 +100,4 @@ a[href*="#info"] {
 	@extend %flexbox;
 	@include justify-content(center);
 	text-transform: capitalize;
-
-	@include breakpoint($utility-nav-columns) {
-		border: 2px solid rgba(255, 255, 255, 0.22);
-		padding: 12px 0;
-	}
 }
